--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -1,41 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
+    <View
+            android:id="@+id/status_settings"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings_title"
             android:textColor="@color/dark_grey"
-            android:layout_marginTop="20dp"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="@+id/status_settings"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/status_settings"/>
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@color/dark_grey"
-            android:layout_marginTop="10dp"
-            android:text="@string/settings_group"/>
+    <ImageView
+            android:id="@+id/close_settings"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:contentDescription="@string/close"
+            android:src="@drawable/ic_close"
+            android:layout_marginEnd="8dp"
+            android:scaleType="center"
+            app:layout_constraintTop_toTopOf="@+id/status_settings"
+            app:layout_constraintEnd_toEndOf="@+id/status_settings"
+            app:layout_constraintBottom_toBottomOf="@+id/status_settings"/>
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@color/medium_grey"
-            android:text="@string/settings_group_legendary"
-            android:layout_marginTop="5dp"/>
+    <LinearLayout
+            android:id="@+id/settings_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/status_settings">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/list_Group"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:background="@android:color/white"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textColor="@color/dark_grey"
+                android:layout_marginTop="10dp"
+                android:text="@string/settings_group"/>
 
-</LinearLayout>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/medium_grey"
+                android:text="@string/settings_group_legendary"
+                android:layout_marginTop="5dp"/>
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/list_Group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@android:color/white"/>
+
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
