--- a/app/src/main/res/layout/item_tasks_by_day.xml
+++ b/app/src/main/res/layout/item_tasks_by_day.xml
@@ -19,7 +19,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"/>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
                 android:id="@+id/card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
