--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent" android:layout_height="match_parent"
         android:background="@android:color/white">
 
     <View
@@ -61,6 +61,63 @@
                     android:textSize="16sp"
                     android:textColor="@color/dark_grey"
                     android:layout_marginTop="10dp"
+                    android:text="@string/settings_alarm_clock"/>
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp">
+
+                <com.google.android.material.switchmaterial.SwitchMaterial
+                        android:id="@+id/alarm_actived"
+                        style="@style/CustomSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true"/>
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/settings_alarm_clock_legendary"
+                        android:textStyle="bold"
+                        android:textSize="14sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/alarm_parameter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                <EditText
+                        android:id="@+id/time_ride_fac"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_weight="0.2"
+                        tools:text="01:00"/>
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.8"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:text="@string/settings_alarm_choose_time"
+                        android:textColor="@color/medium_grey"/>
+
+            </LinearLayout>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/dark_grey"
+                    android:layout_marginTop="20dp"
                     android:text="@string/settings_group"/>
 
             <TextView
