--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -61,12 +61,14 @@
                     android:textSize="16sp"
                     android:textColor="@color/dark_grey"
                     android:layout_marginTop="10dp"
-                    android:text="@string/settings_alarm_clock"/>
+                    android:text="@string/settings_alarm_clock"
+                    android:visibility="gone"/>
 
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="20dp"
+                    android:visibility="gone">
 
                 <com.google.android.material.switchmaterial.SwitchMaterial
                         android:id="@+id/alarm_actived"
@@ -138,14 +140,14 @@
                         style="@style/CustomSwitch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:checked="true"/>
+                        android:checked="false"/>
 
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:gravity="center_vertical"
-                        android:text="@string/all_groups"
+                        android:text="@string/active_all_groups"
                         android:textStyle="bold"
                         android:textSize="14sp"/>
 
