--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -61,17 +61,15 @@
                     android:textSize="16sp"
                     android:textColor="@color/dark_grey"
                     android:layout_marginTop="10dp"
-                    android:text="@string/settings_alarm_clock"
-                    android:visibility="gone"/>
+                    android:text="@string/settings_alarm_clock"/>
 
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:visibility="gone">
+                    android:layout_marginTop="20dp">
 
                 <com.google.android.material.switchmaterial.SwitchMaterial
-                        android:id="@+id/alarm_actived"
+                        android:id="@+id/alarm_switch"
                         style="@style/CustomSwitch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -92,24 +90,40 @@
                     android:id="@+id/alarm_parameter"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:visibility="gone">
 
-                <EditText
-                        android:id="@+id/time_ride_fac"
-                        android:layout_width="0dp"
+                <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_weight="0.2"
-                        tools:text="01:00"/>
+                        android:orientation="horizontal">
+
+                    <EditText
+                            android:id="@+id/time_ride_fac"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:layout_weight="0.2"
+                            tools:text="01:00"/>
+
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.8"
+                            android:textSize="14sp"
+                            android:gravity="center"
+                            android:text="@string/settings_alarm_choose_time"
+                            android:textColor="@color/medium_grey"/>
+
+                </LinearLayout>
 
                 <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.8"
+                        android:id="@+id/next_alarm_set"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:textSize="14sp"
-                        android:gravity="center"
-                        android:text="@string/settings_alarm_choose_time"
+                        android:layout_marginTop="10dp"
+                        tools:text="prochain réveil programmé :"
                         android:textColor="@color/medium_grey"/>
 
             </LinearLayout>
