--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -73,7 +73,7 @@
                         style="@style/CustomSwitch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:checked="true"/>
+                        android:checked="false"/>
 
                 <TextView
                         android:layout_width="match_parent"
@@ -91,7 +91,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                 <LinearLayout
                         android:layout_width="match_parent"
@@ -104,6 +105,8 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:layout_weight="0.2"
+                            android:clickable="true"
+                            android:focusable="false"
                             tools:text="01:00"/>
 
                     <TextView
@@ -111,7 +114,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.8"
                             android:textSize="14sp"
-                            android:gravity="center"
+                            android:gravity="center_vertical"
                             android:text="@string/settings_alarm_choose_time"
                             android:textColor="@color/medium_grey"/>
 
@@ -123,7 +126,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="14sp"
                         android:layout_marginTop="10dp"
-                        tools:text="prochain réveil programmé :"
+                        android:text="@string/next_alarm_set"
                         android:textColor="@color/medium_grey"/>
 
             </LinearLayout>
